ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.7.8
    • Affects Version/s: None
    • Component/s: Security, Sharding
    • None
    • ALL
    • Hide

      Set up a 2.6 sharded cluster with auth. Try to restart one of the mongoses as 2.7.8-pre git commit 0b336ddb1e0ede7a9a381b510b4de344daadc307.

      Show
      Set up a 2.6 sharded cluster with auth. Try to restart one of the mongoses as 2.7.8-pre git commit 0b336ddb1e0ede7a9a381b510b4de344daadc307.
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      I am trying to upgrade a 2.6 sharded cluster (with auth enabled) to 2.7.8-pre (git hash 0b336ddb1e0ede7a9a381b510b4de344daadc307).

      When I take down the first 2.6 mongos, and restart it using the 2.7.8-pre binary, I get:

      $ /tmp/mms-automation/test/versions/mongodb-osx-x86_64-0b336ddb1e0ede7a9a381b510b4de344daadc307-2014-10-17/bin/mongos -f /tmp/mms-automation/test/versions/workspace/mongos-mongosAU_SH1.conf --upgrade
      about to fork child process, waiting until server is ready for connections.
      forked process: 80424
      ERROR: child process failed, exited with error number 1
      

      with the following in the logs:

      2014-10-17T11:16:28.823-0400 I -        
      2014-10-17T11:16:28.823-0400 I -        ** NOTE: This is a development version (2.7.8-pre-) of MongoDB.
      2014-10-17T11:16:28.824-0400 I -        **       Not recommended for production.
      2014-10-17T11:16:28.824-0400 I -        
      2014-10-17T11:16:28.841-0400 I SHARDING [mongosMain] MongoS version 2.7.8-pre- starting: pid=80424 port=9010 64-bit host=neurofunk.local (--help for usage)
      2014-10-17T11:16:28.841-0400 I -        [mongosMain] db version v2.7.8-pre-
      2014-10-17T11:16:28.841-0400 I -        [mongosMain] git version: 0b336ddb1e0ede7a9a381b510b4de344daadc307
      2014-10-17T11:16:28.841-0400 I -        [mongosMain] build info: Darwin mci-osx108-4.build.10gen.cc 12.3.0 Darwin Kernel Version 12.3.0: Sun Jan  6 22:37:10 PST 2013; root:xnu-2050.22.13~1/RELEASE_X86_64 x86_64 BOOST_LIB_VERSION=1_49
      2014-10-17T11:16:28.842-0400 I -        [mongosMain] allocator: system
      2014-10-17T11:16:28.842-0400 I -        [mongosMain] options: { config: "/tmp/mms-automation/test/versions/workspace/mongos-mongosAU_SH1.conf", net: { port: 9010 }, processManagement: { fork: true }, security: { keyFile: "/tmp/mms-automation/test/output/keyfile.keyfile" }, sharding: { configDB: "neurofunk.local:9007,neurofunk.local:9008,neurofunk.local:9009" }, systemLog: { destination: "file", path: "/tmp/mms-automation/test/logs/run9010" }, upgrade: true }
      2014-10-17T11:16:28.847-0400 I NETWORK  [mongosMain] SyncClusterConnection connecting to [neurofunk.local:9007]
      2014-10-17T11:16:28.847-0400 I NETWORK  [mongosMain] SyncClusterConnection connecting to [neurofunk.local:9008]
      2014-10-17T11:16:28.848-0400 I NETWORK  [mongosMain] SyncClusterConnection connecting to [neurofunk.local:9009]
      2014-10-17T11:16:28.849-0400 I ACCESS   [mongosMain] can't authenticate to SyncClusterConnection  [neurofunk.local:9007 (10.4.118.249),neurofunk.local:9008 (10.4.118.249),neurofunk.local:9009 (10.4.118.249)] as internal user, error: auth error on neurofunk.local:9007 :: caused by :: no such cmd: saslStart ::and:: auth error on neurofunk.local:9008 :: caused by :: no such cmd: saslStart ::and:: auth error on neurofunk.local:9009 :: caused by :: no such cmd: saslStart
      2014-10-17T11:16:28.849-0400 E -        [mongosMain] error upgrading config database to v6 :: caused by :: could not load config version for upgrade :: caused by :: can't authenticate to server neurofunk.local:9007,neurofunk.local:9008,neurofunk.local:9009
      

      The config file contains:

      net:
        port: 9010
      processManagement:
        fork: "true"
      security:
        keyFile: /tmp/mms-automation/test/output/keyfile.keyfile
      sharding:
        configDB: neurofunk.local:9007,neurofunk.local:9008,neurofunk.local:9009
      systemLog:
        destination: file
        path: /tmp/mms-automation/test/logs/run9010
      

      This was working fine with git hash 8ef589d359bcb57db83c5d53f1608afbf5b79a01 and has been broken since at least 126069374744c62c65fac86a492531d658961f40.

            Assignee:
            Andreas Nilsson (Inactive)
            Reporter:
            Timothy Olsen (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: