src/mongo/db/auth/security_key.cpp
@@ -36,13 +36,12 @@
 #include <string>
 #include <vector>
 
-#include "mongo/bson/mutable/document.h"
-#include "mongo/bson/mutable/element.h"
 #include "mongo/client/sasl_client_authenticate.h"
 #include "mongo/crypto/mechanism_scram.h"
 #include "mongo/db/auth/action_set.h"
 #include "mongo/db/auth/action_type.h"
 #include "mongo/db/auth/authorization_manager.h"
+#include "mongo/db/auth/internal_user_auth.h"
 #include "mongo/db/auth/privilege.h"
 #include "mongo/db/auth/sasl_options.h"
 #include "mongo/db/auth/user.h"
@@ -51,76 +50,6 @@
 #include "mongo/util/password_digest.h"
 
 namespace mongo {
-    namespace mmb = mongo::mutablebson;
-
-    // not guarded by the authParams mutex never changed in
-    // multi-threaded operation
-    static bool authParamsSet = false;
-
-    // Store default authentication parameters for internal authentication to cluster members,
-    // guarded by the authParams mutex
-    static BSONObj authParams;
-
-    // Store MONGODB-CR authentication parameters to use as fallback for mixed 2.6/28 clusters
-    static BSONObj authParamsCR;
-    static boost::mutex authParamMutex;
-
-    bool isInternalAuthSet() {
-       return authParamsSet;
-    }
-
-    void setInternalUserAuthParams(const BSONObj& authParamsIn) {
-        if (!isInternalAuthSet()) {
-            authParamsSet = true;
-        }
-        boost::mutex::scoped_lock lk(authParamMutex);
-        authParams = authParamsIn.copy();
-
-        // Create authParams for legacy MONGODB-CR authentication if applicable.
-        if (authParams["mechanism"].String() == "SCRAM-SHA-1") {
-            mmb::Document doc(authParams);
-            doc.root().findFirstChildNamed("mechanism").setValueString("MONGODB-CR");
-            authParamsCR = doc.getObject().copy();
-        }
-    }
-
-    bool authenticateInternalUser(DBClientWithCommands* conn){
-        if (!isInternalAuthSet()) {
-            log() << "ERROR: No authentication parameters set for internal user" << endl;
-            return false;
-        }
-
-        BSONObj authParamsCopy;
-        BSONObj authParamsCRCopy;
-        {
-            boost::mutex::scoped_lock lk(authParamMutex);
-            authParamsCopy = authParams.copy();
-            authParamsCRCopy = authParamsCR.copy();
-        }
-
-        try {
-            conn->auth(authParamsCopy);
-            return true;
-        } catch(const UserException& ex) {
-            if (ex.getCode() != ErrorCodes::BadValue &&
-                ex.getCode() != ErrorCodes::CommandNotFound) {
-                log() << "can't authenticate to " << conn->toString() <<
-                            " as internal user, error: "<< ex.what() << endl;
-                return false;
-            }
-        }
-
-        // BadValue indicates unsupported auth mechanism so fall back to
-        // MONGODB-CR for 2.6 compatibility.
-        try {
-            conn->auth(authParamsCRCopy);
-            return true;
-        } catch(const UserException& ex) {
-            log() << "can't authenticate to " << conn->toString() << " as internal user, error: "
-                  << ex.what() << endl;
-            return false;
-        }
-    }
 
     bool setUpSecurityKey(const string& filename) {
         struct stat stats;
