src/mongo/db/commands/parameters.cpp
@@ -36,7 +36,7 @@
 #include "mongo/client/replica_set_monitor.h"
 #include "mongo/client/sasl_client_authenticate.h"
 #include "mongo/db/auth/authorization_manager.h"
-#include "mongo/db/auth/security_key.h"
+#include "mongo/db/auth/internal_user_auth.h"
 #include "mongo/db/commands.h"
 #include "mongo/db/server_parameters.h"
 #include "mongo/db/storage_options.h"
